--- a/static/chooseLocation.html
+++ b/static/chooseLocation.html
@@ -33,7 +33,8 @@
                     </select>
                 </div>   
                 <div class="przycisk">
-                    <input type ="submit" value="Submit" />
+                    
+                    <button type ="submit" value="Submit">Submit</button>
                 </div>
             </form>    
         </div>
